--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="footer">
-        <div>Copyright © The four bastards in the front of the class 2022</div>
+        <div>Copyright © Swift-Meal 2022</div>
     </div>
 </body>
 
